# diploma_project

./: .gitignore  CMakeLists.txt  helpers.cpp  helpers.h  main.cpp  model.cpp  model.h  model.json  rational.cpp
py_remake/: Makefile  main.cpp
templates/: CMakeLists.txt  main.cpp
